fixed issue with header/overlay z-index

--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,7 @@ i {
   min-height: 55px;
   height: auto;
   padding: 0 1rem;
-  z-index: 50;
+  /* z-index: 100; */
   transition: background-color 0.3s ease-in;
 }
 
@@ -318,7 +318,7 @@ i {
   opacity: 0;
   visibility: hidden;
   z-index: 100;
-  transition: all 0.3s ease-in;
+  transition: opacity 0.3s ease-in;
 }
 
 .overlay.show {
@@ -326,6 +326,22 @@ i {
   opacity: 1;
 }
 
+
+.hotfix-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: transparent;
+  width: 100%;
+  height: 100vh;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.hotfix-overlay.show {
+  visibility: visible;
+  opacity: 1;
+}
 /* MAIN PANEL */
 
 /* ADD BUTTON */
@@ -550,9 +566,14 @@ i {
 
 /* */
 
+.more-options-wrapper {
+  position: relative;
+
+}
+
 .more-options {
   display: flex;
-  z-index: 50;
+  z-index: 200;
   flex-direction: column;
   position: absolute;
   width: 200px;
@@ -758,16 +779,23 @@ i {
   gap: 0.8rem;
 }
 
+
 .category-edit-button {
   padding: 1.2rem 2.4rem;
   border-radius: 4px;
   border-top-right-radius: 10px;
-  background-image: linear-gradient(to top, #ffe5e5, #fff2f2);
+  background-color: var(--bg-color);
+  border: 1px solid var(--sub-text-color);
   font-weight: 700;
+  color: var(--text-color);
 }
 
 .category-input {
   padding: 0;
+}
+
+.category-input::placeholder {
+  color: var(--sub-text-color);
 }
 
 .category-list-wrapper {
@@ -795,6 +823,10 @@ i {
 .category-item-actions button {
   background: none;
   border: none;
+}
+
+.category-item-actions i {
+  color: var(--text-color);
 }
 
 /* EDIT CATEGORY MODAL */
